Fixed line breaks in tasks.

--- a/_sass/_audiokit.scss
+++ b/_sass/_audiokit.scss
@@ -34,7 +34,6 @@ iframe {
 
 .task-list li {
   margin-bottom: 3px;
-  display: inline-block;
 }
 
 .task-list li span.tooltip code a {
